--- a/walrus/walrus/templates/task_list.html
+++ b/walrus/walrus/templates/task_list.html
@@ -5,5 +5,18 @@
      {{ form.as_p }}
      
 
-     <button> Submit </button>
+     <button> Submit </button> <br>
+
+
+{% for t in tasks %}
+
+    {{ t.task_name }}  {{t.project.project_name}} {{ t.employee_set.all }}
+    {% for emp in t.employee_set.all %} 
+    {{ emp.user.first_name }} {{ emp.user.last_name }}
+    {% endfor %}
+<br>
+{% endfor %}
+
+
+
 </form>
