--- a/walrus/walrus/templates/task_list.html
+++ b/walrus/walrus/templates/task_list.html
@@ -5,16 +5,24 @@
      {{ form.as_p }}
      
 
-     <button> Submit </button> <br>
+     <button> Submit </button> <br><br>
+     <h3>task name &nbsp&nbsp&nbsp&nbsp Project Name &nbsp&nbsp&nbsp&nbsp Employees &nbsp&nbsp&nbsp&nbsp Status</h3> <br>
 
 
 {% for t in tasks %}
 
-    {{ t.task_name }}  {{t.project.project_name}} {{ t.employee_set.all }}
+    {{ t.task_name }}  {{t.project.project_name}} 
     {% for emp in t.employee_set.all %} 
-    {{ emp.user.first_name }} {{ emp.user.last_name }}
+    {{ emp.user.first_name }} {{ emp.user.last_name }} 
     {% endfor %}
-<br>
+    {% if t.is_complete %}
+    Complete
+    {% else %}
+    Incomplete
+    {% endif %}
+
+
+<br><br>
 {% endfor %}
 
 
