--- a/walrus/walrus/templates/task_list.html
+++ b/walrus/walrus/templates/task_list.html
@@ -6,7 +6,7 @@
      
 
      <button> Submit </button> <br><br>
-     <h3>task name &nbsp&nbsp&nbsp&nbsp Project Name &nbsp&nbsp&nbsp&nbsp Employees &nbsp&nbsp&nbsp&nbsp Status</h3> <br>
+     <h3>task name &nbsp&nbsp&nbsp&nbsp Project Name &nbsp&nbsp&nbsp&nbsp Employees &nbsp&nbsp&nbsp&nbsp Due Date &nbsp&nbsp&nbsp&nbsp Status </h3> <br>
 
 
 {% for t in tasks %}
@@ -15,11 +15,14 @@
     {% for emp in t.employee_set.all %} 
     {{ emp.user.first_name }} {{ emp.user.last_name }} 
     {% endfor %}
+    {{ t.due_date }}
+    
     {% if t.is_complete %}
     Complete
     {% else %}
     Incomplete
     {% endif %}
+    
 
 
 <br><br>
