main functionality working.

--- a/walrus/walrus/templates/task_list.html
+++ b/walrus/walrus/templates/task_list.html
@@ -27,7 +27,7 @@
     {% endif %}
     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
     {% for emp in t.employee_set.all %} 
-    {{ emp.user.first_name }} {{ emp.user.last_name }} 
+    {{ emp.user.first_name }} {{ emp.user.last_name }} &nbsp
     {% endfor %}  
 
 
