--- a/walrus/walrus/templates/calendar.html
+++ b/walrus/walrus/templates/calendar.html
@@ -1,10 +1,10 @@
-
 {% block content %}
 <div>
-    <h1> {{curCalen|safe}} <h1>
+    <center> {{curCalen|safe}} </center>
         <style>
             .month{
             text-align: center;
+            font-size: 40px;
             }
             .mon{
             padding-left:15px;
@@ -31,4 +31,13 @@
 
           
 </div>
+
+<h2> Tasks for Month </h2>
+    {% for task in tasks %}
+        <font size=3>Name: {{ task.task_name|capfirst }}</font> <br>
+        <font size=3>Description: {{ task.task_description|capfirst }}</font> <br>
+        <font size=3>Done: {{ task.is_complete }}</font> <br>
+        <a href='{% url "delete_task" task.id %}'> Delete </a>
+        <p> -------------- </p>
+    {% endfor %}
 {% endblock %}
