simple border for UI
tinkering with figuring out the border before I do the display

--- a/walrus/walrus/templates/task_detail.html
+++ b/walrus/walrus/templates/task_detail.html
@@ -3,8 +3,19 @@
     .center {
         text-align: center;
     }
+    fieldset {
+        border: 1px solid rgb(0, 0, 0);
+        width: 400px;
+        margin:auto;
+    }
 </style>
 
 
 
-{% endblock % }
+<div id="form">
+    <fieldset>
+        <legend>Task 1</legend>
+    </fieldset>
+</div>
+
+{% endblock %}
