--- a/walrus/walrus/templates/manager_home.html
+++ b/walrus/walrus/templates/manager_home.html
@@ -4,7 +4,11 @@
 <h3>Manager Home</h3>
 
 <div>
-    <button>Create Task</button>
+    <form action="{% url 'add_task' %}" method="post">
+        {% csrf_token %}
+        <button action="{% url 'add_task' %}" method="post" type="submit" class="btn btn-primary">Add Tasks</button>
+    </form>
+      
 
 
 </div>
