added buttons to manager home page

--- a/walrus/walrus/templates/manager_home.html
+++ b/walrus/walrus/templates/manager_home.html
@@ -8,6 +8,9 @@
         {% csrf_token %}
         <button type="submit" name="destination" value="/add_task/">Add Tasks</button>
         <button type="submit" name="destination" value="/list_tasks/">View All Tasks</button>
+        <button type="submit" name="destination" value="/schedule_employee/">Scheduling</button>
+        <button type="submit" name="destination" value="/employee_info/">Employee Information</button>
+        <button type="submit" name="destination" value="/edit_user_info/">Edit User Information</button>
       </form>
       
 
