--- a/walrus/walrus/templates/manager_home.html
+++ b/walrus/walrus/templates/manager_home.html
@@ -9,7 +9,7 @@
         <button type="submit" name="destination" value="/add_task/">Add Tasks</button>
         <button type="submit" name="destination" value="/list_tasks/">View All Tasks</button>
         <button type="submit" name="destination" value="/schedule_employee/">Scheduling</button>
-        <button type="submit" name="destination" value="/employee_info/">Employee Information</button>
+        <button type="submit" name="destination" value="/employee_stats/">Employee Statistics</button>
         <button type="submit" name="destination" value="/edit_user_info/">Edit User Information</button>
       </form>
       
