--- a/walrus/walrus/templates/employee_stats.html
+++ b/walrus/walrus/templates/employee_stats.html
@@ -2,6 +2,10 @@
 <title>Employee Statistics</title>
 <h3>Let's do some micromanaging!</h3>
 
-{{ search_input }}
+<form method="post" action="{% url 'employee_stats' %}">
+  {% csrf_token %}
+  {{ form }}
+  <button type="submit" name="id_search" value="submit">Search</button>
+</form>
 
 {% endblock %}
