upload image now working.

--- a/walrus/walrus/templates/update_task_status.html
+++ b/walrus/walrus/templates/update_task_status.html
@@ -1,9 +1,9 @@
 Hello
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
 {% csrf_token %}
     
     {{ form }}
 
 
-<input type="Submit"  value="submit Update">
+<input type="Submit"  value="submit Update" >
 </form>
