--- a/walrus/walrus/templates/update_task_status.html
+++ b/walrus/walrus/templates/update_task_status.html
@@ -1,8 +1,8 @@
-Hello
+<br>
 <form method="POST" enctype="multipart/form-data">
 {% csrf_token %}
     
-    {{ form }}
+    {{ form.as_p }}
 
 
 <input type="Submit"  value="submit Update" >
