Go Back button function
Button functional, but the link gives an error for some reason. Works perfectly otherwise

--- a/walrus/walrus/templates/task_detail.html
+++ b/walrus/walrus/templates/task_detail.html
@@ -41,7 +41,7 @@
         </fieldset> <br>
 
         <button class="button button1">Edit Task</button>
-        <button class="button button2">Go Back</button>
+        <button class="button button2" onclick="location.href='{% url 'list_tasks' %}'">Go Back</button>
     </fieldset>
 </div>
 
