added title to html page.

--- a/walrus/walrus/templates/update_task_status.html
+++ b/walrus/walrus/templates/update_task_status.html
@@ -1,7 +1,7 @@
-<br>
+
 <form method="POST" enctype="multipart/form-data">
 {% csrf_token %}
-    
+    <h3>Task Status Update</h3>
     {{ form.as_p }}
 
 
