--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -9,7 +9,7 @@
 
 <h3>My Tasks:</h3>
 {% for x in tasks %}
-{{x.task_name}} <a href="{%url 'list_tasks' %}/{{x.task_name}}">Update </a> <br>
+{{x.task_name}} <a href="{%url 'list_tasks' %}{{x.pk}}">Update </a> <br>
 
 <a href="task_detail/{{ x.pk }}">Description </a>
 <br>
