working on models

--- a/walrus/walrus/templates/employee_stats.html
+++ b/walrus/walrus/templates/employee_stats.html
@@ -7,5 +7,7 @@
   {{ form }}
   <button type="submit" name="id_search" value="submit">Search</button>
 </form>
-
+<div name="tasks-div">
+  <!-- Tasks should go here -->
+</div>
 {% endblock %}
