--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -15,6 +15,8 @@ Hi {{ user.first_name }}!
 <a href="{%url 'calendar' %}">Calendar </a>
 <br>
 <a > RTO/Avilability </a>
+<br>
+<a href="{%url 'list_tasks' %}">All Tasks </a>
 
 <h3>My Tasks:</h3>
 {% for x in tasks %}
