changed task back to task_id
oops

--- a/walrus/walrus/templates/task_detail.html
+++ b/walrus/walrus/templates/task_detail.html
@@ -37,7 +37,7 @@
             <legend><b>Task Info</b></legend>
             <a>Project Name: {{ task.task_Name }}</a>
             <h1>{{ "" }}</h1> <!--blank space-->
-            <a>Assigned To: {{ task.Assigned_emp }}</a>
+            <a>Assigned To: {{ }}</a>
         </fieldset> <br>
 
         <button class="button button1">Edit Task</button>
