working with home page
Merged main into the branch and now have a very minor functionality.
Still need to display employee name, and have the edit button not appear for normal users.

--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -22,7 +22,7 @@ Hi {{ user.first_name }}!
 {% for x in tasks %}
 {{x.task_name}} <a href= {% url 'update_task_status' task_id=x.pk %}>Update </a> <br>
 
-<a>Description </a>
+<a href = "/task_detail/{{ x.pk }}">Description </a>
 <br>
 <button type="submit" name="{{x}}"> Clock-in </button> <br><br>
 {% endfor %}
