--- a/walrus/walrus/templates/task_detail.html
+++ b/walrus/walrus/templates/task_detail.html
@@ -1,4 +1,5 @@
 {% block content %}
+
 <style>
     .center {
         text-align: center;
@@ -41,8 +42,11 @@
             <a>Assigned To: {{ task.assigned_emp }} </a>
         </fieldset> <br>
 
+        <h1>{{ user.pk }}</h1>
         <button class="button button1">Edit Task</button>
-        <button class="button button2" onclick="location.href='{% url 'list_tasks' %}'">Go Back</button>
+        <button class="button button2">
+            <a href="{% url 'home' %}">Go Back</a>
+        </button>
     </fieldset>
 </div>
 
