Display name + forgot to remove test line
Note to self: adjust the display name later this week when you figure out how to work with the admin stuff

also silly forgot to remove a line that was used for testing

--- a/walrus/walrus/templates/task_detail.html
+++ b/walrus/walrus/templates/task_detail.html
@@ -39,7 +39,7 @@
             <legend><b>Task Info</b></legend>
             <a>Project Name: {{ task.task_name }}</a>
             <h1>{{ "" }}</h1> <!--blank space-->
-            <a>Assigned To: {{ task.assigned_emp }} </a>
+            <a>Assigned To: {{ user.first_name }} {{" "}} {{ user.last_name }} </a>
         </fieldset> <br>
 
         <h1>{{ user.pk }}</h1>
