--- a/walrus/walrus/templates/schedule_employee.html
+++ b/walrus/walrus/templates/schedule_employee.html
@@ -8,3 +8,12 @@
 
 <h3>Employees avilabilty</h3>
     {{ avil.sunday_start }} - {{avil.sunday_end}}
+
+
+    <form method="POST">
+        <h3>schedule an employee</h3>
+    
+        {% csrf_token %}
+    {{ schedule_form.as_p }}
+    <button> Submit </button>
+    </form>
