--- a/walrus/walrus/templates/schedule_employee.html
+++ b/walrus/walrus/templates/schedule_employee.html
@@ -3,17 +3,21 @@
 
     {% csrf_token %}
 {{ search_form.as_p }}
-<button> Submit </button>
+<button name="search"> Submit </button>
 </form>
 
 <h3>Employees avilabilty</h3>
-    {{ avil.sunday_start }} - {{avil.sunday_end}}
+    {{ avil.sunday_start }} - {{avil.sunday_end}} {{ avil.monday_start }} - {{avil.monday_end}} {{ avil.tuesday_start }} - {{avil.tuesday_end}}
+    {{ avil.wednesday_start }} - {{avil.wednesday_end}} {{ avil.thursday_start }} - {{avil.thursday_end}} 
+    {{ avil.friday_start }} - {{avil.friday_end}}     {{ avil.saturday_start }} - {{avil.saturday_end}}
+
 
 
     <form method="POST">
+
         <h3>schedule an employee</h3>
     
         {% csrf_token %}
     {{ schedule_form.as_p }}
-    <button> Submit </button>
+    <button name="save_shift"> Submit </button>
     </form>
