--- a/walrus/walrus/templates/employee_stats.html
+++ b/walrus/walrus/templates/employee_stats.html
@@ -8,6 +8,10 @@
   <button type="submit" name="id_search" value="submit">Search</button>
 </form>
 <div name="tasks-div">
+  <p> {{ employee.first_name }}</p>
   <!-- Tasks should go here -->
+  {% for task in tasks %}
+    {% include 'stat_card.html' with task=task %}
+  {% endfor %}
 </div>
 {% endblock %}
