--- a/walrus/walrus/templates/shift_switch.html
+++ b/walrus/walrus/templates/shift_switch.html
@@ -29,7 +29,12 @@
         <h3>Shifts Available:</h3>
         {% for s in shifts %}
             <fieldset>
-                
+                <legend><b>Group Name</b></legend>
+                <b>Date: {{ s.date }} Start: {{ s.start }} End: {{ s.end }}</b>
+                <br><br>
+                <b>Task</b>
+                <br><br>
+                <button class="button">Pick Up Shift</button>
             </fieldset>
         {% endfor %}
     </div>
