--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -16,6 +16,8 @@ Hi {{ user.first_name }}!
 
 {% csrf_token %}
 <br>
+Todays shift : {{shift.start}} -  {{shift.end}}
+<br><br>
 <a href="{%url 'calendar' %}">Calendar </a>
 <br>
 <a href="{% url 'manager_tools' %}">Manager Tools</a>
