linked to edit_task
here goes, hopefully final edit before merge

--- a/walrus/walrus/templates/task_detail.html
+++ b/walrus/walrus/templates/task_detail.html
@@ -62,7 +62,8 @@
 
         <!--hides button if user is not a superuser-->
         {% if user.is_superuser %}
-            <button class="button buttonED" id="btn1">Edit Task</button>
+            <!--not sure if edit_task works yet, writing this anyways-->
+            <a href="/manager_tools/edit_task/{{ task.pk }}" class="button buttonED" id="btn1">Edit Task</a>
         {% endif %}
         
         <a href="{% url 'home' %}" class="button buttonGB">Go Back</a>
