fixed a issue with task_card html.

--- a/walrus/walrus/templates/task_card.html
+++ b/walrus/walrus/templates/task_card.html
@@ -24,7 +24,7 @@
                     {% endif %}
                 </td>
                 <!-- Date Task Was Assigned -->
-                <td> {{ task.Date_assigned_to }} </td>
+                <td> {{ task.date_assigned_to }} </td>
                 <!-- Due date for the task -->
                 <td> {{ task.due_date }} </td>
                 <!-- Date task was completed -->
