--- a/walrus/walrus/templates/schedule_employee.html
+++ b/walrus/walrus/templates/schedule_employee.html
@@ -25,7 +25,7 @@
 
     <form method="POST">
 
-        <h3>Select a week</h3>
+        <h3>All shifts for the week of: </h3>
     
         {% csrf_token %}
     {{ select_week_form.as_p }}
