--- a/walrus/walrus/templates/calendar.html
+++ b/walrus/walrus/templates/calendar.html
@@ -24,6 +24,8 @@
     margin: 15px;
   }
 </style>
+<br>
+&nbsp&nbsp&nbsp&nbsp<a href="{% url 'home' %}" class="button buttonGB">Go Back</a>
 
 {{ calendar }}
 <style>
