--- a/walrus/walrus/templates/add_task.html
+++ b/walrus/walrus/templates/add_task.html
@@ -25,19 +25,22 @@
         padding: 8px 20px;
         margin: 4px 0;
         box-sizing: border-box;
-        background-color:lightsteelblue;
+        color:#000000;
       }
       select {
         padding: 8px 20px;
         border: 2px solid black;
         border-radius: 4px;
-        background-color:lightsteelblue;
       }
       [type="date"] {
         padding: 8px 20px;
         margin: 4px 0;
         box-sizing: border-box;
-        background-color:lightsteelblue;
+      }
+      [type="submit"]{
+        padding: 8px 20px;
+        margin: 4px 0;
+        box-sizing: border-box;
       }
       </style>
   </form>
