changing profile image works.

--- a/walrus/walrus/templates/profile.html
+++ b/walrus/walrus/templates/profile.html
@@ -9,6 +9,20 @@ height="500" >
 width="200" 
 height="200" >
 {% endif %}
+
+<form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+        
+        {{ pic_form.as_p }}
+        <input type="Submit"  value="change picture" name="change picture" >
+    </form>
+    <form method="POST">
+    {% csrf_token %}
+
+    <input type="Submit"  value="remove picture" name="remove" >
+</form>
+
+
 <br>
 {{ user.first_name }} {{ user.last_name}}
 <br>
