--- a/walrus/walrus/templates/manager_tools.html
+++ b/walrus/walrus/templates/manager_tools.html
@@ -10,12 +10,12 @@
     <h3 class="heading">Manager Tools</h3>
       <form action="{% url 'manager_tools_redirect' %}" method="post">
           {% csrf_token %}
-          <button class="btn btn-primary" type="submit" name="destination" value="/add_task/">Add Tasks</button>
-          <button class="btn btn-primary" type="submit" name="destination" value="/create_project/">Create Project</button>
-          <button class="btn btn-primary" type="submit" name="destination" value="/list_tasks/">View All Tasks</button>
-          <button class="btn btn-primary" type="submit" name="destination" value="/schedule_employee/">Scheduling</button>
-          <button class="btn btn-primary" type="submit" name="destination" value="/employee_stats/">Employee Statistics</button>
-          <button class="btn btn-primary" type="submit" name="destination" value="/edit_user_info/">Edit User Information</button>
+          <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/add_task/">Add Tasks</button>
+          <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/create_project/">Create Project</button>
+          <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/list_tasks/">View All Tasks</button>
+          <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/schedule_employee/">Scheduling</button>
+          <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/employee_stats/">Employee Statistics</button>
+          <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/edit_user_info/">Edit User Information</button>
         </form>
       </div>
   </div>
