--- a/walrus/walrus/templates/styles/manager_tools.css
+++ b/walrus/walrus/templates/styles/manager_tools.css
@@ -1,12 +1,10 @@
-body {
-    text-align: center;    
-  }
 
 .cards {
     margin: 0 auto;
     display: flex;
     border-radius: 10px;
-    justify-content: center;
+    border-color: #000000;
+    justify-content: space-around;
     flex-wrap: wrap;
     margin-top: 15px;
     padding: 1.5%;
@@ -18,4 +16,7 @@ body {
     box-shadow: 0 4px 10px rgba(0,0,0,0.16), 0 4px 10px rgba(0,0,0,0.23);
   }
   
-  
+.btn-primary {
+    margin: 10px; /* Adds space around buttons */
+    /* other styles */
+}
