--- a/walrus/walrus/templates/manager_tools.html
+++ b/walrus/walrus/templates/manager_tools.html
@@ -1,14 +1,12 @@
 {% block content %}
-
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/styles/manager_tools.css">
+s</head>
 <title>Manager Tools</title>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<link href="/../styles/manager_tools.css">
-
-<div class="card cards text-center" style="width: 18rem;">
-  <div class="card-body">
-    <h3 class="heading">Manager Tools</h3>
-      <form action="{% url 'manager_tools_redirect' %}" method="post">
+      <form id="button-container" class="button-container" action="{% url 'manager_tools_redirect' %}" method="post">
+        <h1 class="heading">Manager Tools</h1>
           {% csrf_token %}
           <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/add_task/">Add Tasks</button>
           <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/create_project/">Create Project</button>
@@ -16,8 +14,6 @@
           <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/schedule_employee/">Scheduling</button>
           <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/employee_stats/">Employee Statistics</button>
           <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/edit_user_info/">Edit User Information</button>
-        </form>
-      </div>
-  </div>
+      </form>
 
 {% endblock %}
