--- a/walrus/walrus/templates/manager_tools.html
+++ b/walrus/walrus/templates/manager_tools.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="/styles/manager_tools.css">
-s</head>
+</head>
 <title>Manager Tools</title>
 
       <form id="button-container" class="button-container" action="{% url 'manager_tools_redirect' %}" method="post">
