static folder for css

--- a/walrus/walrus/templates/manager_tools.html
+++ b/walrus/walrus/templates/manager_tools.html
@@ -1,8 +1,10 @@
-{% block content %}
-<head>
+{% load static %}
+
+{% block extra_head %}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/styles/manager_tools.css">
-</head>
+  <link rel="stylesheet" href="{% static 'css/manager_tools.css' %}">
+{% endblock %}
+{% block content %}
 <title>Manager Tools</title>
 
       <form id="button-container" class="button-container" action="{% url 'manager_tools_redirect' %}" method="post">
@@ -15,5 +17,4 @@
           <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/employee_stats/">Employee Statistics</button>
           <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/edit_user_info/">Edit User Information</button>
       </form>
-
 {% endblock %}
