static URL now works

--- a/walrus/walrus/templates/manager_tools.html
+++ b/walrus/walrus/templates/manager_tools.html
@@ -2,7 +2,7 @@
 
 {% block extra_head %}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{% static 'css/manager_tools.css' %}">
+  <link rel="stylesheet" href="{% static '/css/manager_tools.css' %}">
 {% endblock %}
 {% block content %}
 <title>Manager Tools</title>
